--- a/public/pages/configuracoes.html
+++ b/public/pages/configuracoes.html
@@ -1,7 +1,13 @@
-
 <section class="section">
   <div class="section-head"><div class="h2">Configurações</div></div>
   <div class="grid">
+    <div class="card" id="card-pwa">
+      <div class="h2" style="font-size:16px">Instalar Aplicativo</div>
+      <div class="badge">Adicione o BiblioFlow à sua tela inicial.</div>
+      <div class="row" style="margin-top:8px">
+        <button class="btn btn-cta" id="btn-pwa-install">Instalar</button>
+      </div>
+    </div>
     <div class="card">
       <div class="h2" style="font-size:16px">Compartilhar Acervo</div>
       <div class="badge">Crie ou vincule um código para dividir a biblioteca.</div>
