--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -1,16 +1,15 @@
-
 <section class="section">
   <div class="section-head">
     <div class="h2">Dashboard</div>
   </div>
-  <div class="grid2">
+  <div class="card" style="grid-column:1/-1"><div class="badge">Streak</div><div id="stat-streak" style="font-size:24px;font-weight:700">🔥 0</div></div>
+  <div class="grid2" style="margin-top:12px">
     <div class="card"><div class="badge">Livros</div><div id="stat-livros" style="font-size:24px;font-weight:700">0</div></div>
     <div class="card"><div class="badge">Leituras</div><div id="stat-leituras" style="font-size:24px;font-weight:700">0</div></div>
     <div class="card"><div class="badge">Autores</div><div id="stat-autores" style="font-size:24px;font-weight:700">0</div></div>
     <div class="card"><div class="badge">Metas Ativas</div><div id="stat-metas" style="font-size:24px;font-weight:700">0</div></div>
     <div class="card"><div class="badge">Tempo de leitura</div><div id="stat-tempo" style="font-size:24px;font-weight:700">0h</div></div>
     <div class="card"><div class="badge">Gênero mais lido</div><div id="stat-genero" style="font-size:24px;font-weight:700">-</div></div>
-    <div class="card" style="grid-column:1/-1"><div class="badge">Streak</div><div id="stat-streak" style="font-size:24px;font-weight:700">🔥 0</div></div>
   </div>
   <div class="section" style="margin-top:12px">
     <div class="card">
