--- a/public/pages/comunidade.html
+++ b/public/pages/comunidade.html
@@ -1,11 +1,34 @@
-
 <section class="section">
   <div class="section-head">
     <div class="h2">Comunidade</div>
-    <div class="actions"><button class="btn btn-cta">Adicionar Amigo</button></div>
   </div>
-  <div class="card"><div class="h2" style="font-size:16px">Amigos</div><div id="amigos" class="row"></div></div>
-  <div class="card"><div class="h2" style="font-size:16px">Grupos de leitura</div><div id="grupos" class="grid"></div><div class="row" style="margin-top:8px"><button class="btn btn-ghost" id="btn-novo-grupo">Criar grupo</button></div></div>
-  <div class="card"><div class="h2" style="font-size:16px">Desafios</div><div id="desafios" class="grid"></div></div>
-  <div class="grid" id="feed" style="margin-top:12px"></div>
+  
+  <div class="card tabs-bar">
+    <button class="tab-btn active" data-tab="feed">Feed</button>
+    <button class="tab-btn" data-tab="amigos">Amigos</button>
+    <button class="tab-btn" data-tab="grupos">Grupos</button>
+  </div>
+  
+  <div id="tab-content-feed" class="tab-content grid">
+    <div class="section-head" style="margin-top:12px">
+      <div class="h2" style="font-size:16px">Atividade Recente</div>
+    </div>
+    <div id="feed" class="grid"></div>
+  </div>
+  
+  <div id="tab-content-amigos" class="tab-content grid hidden">
+    <div class="section-head" style="margin-top:12px">
+      <div class="h2" style="font-size:16px">Amigos</div>
+      <div class="actions"><button class="btn btn-cta">Adicionar Amigo</button></div>
+    </div>
+    <div class="card"><div id="amigos" class="row"></div></div>
+  </div>
+
+  <div id="tab-content-grupos" class="tab-content grid hidden">
+    <div class="section-head" style="margin-top:12px">
+      <div class="h2" style="font-size:16px">Grupos de leitura</div>
+    </div>
+    <div class="card"><div id="grupos" class="grid"></div><div class="row" style="margin-top:8px"><button class="btn btn-ghost" id="btn-novo-grupo">Criar grupo</button></div></div>
+    <div class="card"><div class="h2" style="font-size:16px">Desafios</div><div id="desafios" class="grid"></div></div>
+  </div>
 </section>
