--- a/public/pages/perfil.html
+++ b/public/pages/perfil.html
@@ -1,4 +1,3 @@
-
 <section class="section">
   <div class="section-head"><div class="h2">Perfil</div></div>
   <div class="card grid">
@@ -7,6 +6,27 @@
       <div class="field"><label class="label">ID (somente leitura)</label><input class="input" id="uid" value="bf_4f29a1" readonly></div>
       <div class="field"><label class="label">Código do Acervo</label><input class="input" id="acv" value="acv_9b82c3" readonly></div>
     </div>
-    <button class="btn btn-primary" id="btn-save">Salvar</button>
+    <div class="row" style="justify-content:flex-end">
+        <button class="btn btn-primary" id="btn-save-perfil">Salvar</button>
+    </div>
+  </div>
+
+  <div class="card grid" style="margin-top:12px">
+    <div class="h2" style="font-size:16px">Atualizar Informações de Acesso</div>
+    <div class="field"><label class="label">Email Atual</label><input class="input" id="current-email" type="email" readonly></div>
+    <div class="field"><label class="label">Novo Email</label><input class="input" id="new-email" type="email"></div>
+    <div class="field"><label class="label">Senha Atual</label><input class="input" id="current-password" type="password"></div>
+    <div class="row" style="justify-content:flex-end">
+        <button class="btn btn-primary" id="btn-update-email">Atualizar Email</button>
+    </div>
+  </div>
+  
+  <div class="card grid" style="margin-top:12px">
+    <div class="h2" style="font-size:16px">Atualizar Senha</div>
+    <div class="field"><label class="label">Senha Atual</label><input class="input" id="old-password-change" type="password"></div>
+    <div class="field"><label class="label">Nova Senha</label><input class="input" id="new-password-change" type="password"></div>
+    <div class="row" style="justify-content:flex-end">
+      <button class="btn btn-primary" id="btn-update-password">Atualizar Senha</button>
+    </div>
   </div>
 </section>
