--- a/public/pages/temporizador.html
+++ b/public/pages/temporizador.html
@@ -1,4 +1,3 @@
-
 <section class="section">
   <div class="section-head"><div class="h2">Temporizador</div></div>
   <div class="card grid">
@@ -7,14 +6,21 @@
       <button class="btn btn-ghost" id="btn-timer">Timer</button>
     </div>
     <div class="field hidden" id="timer-config">
-      <label class="label">Tempo (segundos)</label>
-      <input id="timer-seg" class="input" type="number" value="1500">
+      <label class="label">Tempo para o timer</label>
+      <div class="row" style="gap:12px">
+        <input id="timer-min" class="input" type="number" value="10" placeholder="minutos">
+        <input id="timer-sec" class="input" type="number" value="0" placeholder="segundos">
+      </div>
     </div>
-    <div style="text-align:center; font-size:36px; font-weight:700" id="display">00:00.0</div>
+    <div style="text-align:center; font-size:36px; font-weight:700" id="display">00:00</div>
     <div class="row" style="justify-content:center">
       <button class="btn btn-cta" id="btn-play">Iniciar</button>
       <button class="btn btn-ghost" id="btn-cancel">Cancelar</button>
       <button class="btn btn-ghost" id="btn-ok">Concluir</button>
     </div>
+  </div>
+  <div class="card" style="margin-top:12px">
+    <div class="h2" style="font-size:16px">Histórico de Sessões</div>
+    <div id="historico" class="grid"></div>
   </div>
 </section>
